--- a/BattleCampusMatchServer/BattleCampusMatchServer.csproj
+++ b/BattleCampusMatchServer/BattleCampusMatchServer.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.AzureAppServices" Version="3.1.10" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BattleCampusMatchServer.Models\BattleCampusMatchServer.Models.csproj" />
     <ProjectReference Include="..\BattleCampusMatchServer.Services\BattleCampusMatchServer.Services.csproj" />
   </ItemGroup>
