Fixed logging bug on Azure Web App by changing environment in AWA to Development

--- a/BattleCampusMatchServer/appsettings.Development.json
+++ b/BattleCampusMatchServer/appsettings.Development.json
@@ -1,9 +1,24 @@
 {
   "Logging": {
+    "IncludeScopes": false,
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
+    },
+    "AzureAppServicesBlob": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "AzureAppServicesFile": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
     }
   }
 }
