--- a/BattleCampus.Dashboard/BattleCampus.Dashboard.csproj
+++ b/BattleCampus.Dashboard/BattleCampus.Dashboard.csproj
@@ -1,7 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BattleCampus.Core\BattleCampus.Core.csproj" />
+    <ProjectReference Include="..\BattleCampus.Dashboard.Application\BattleCampus.Dashboard.Application.csproj" />
+    <ProjectReference Include="..\BattleCampus.ReportServer.Persistence\BattleCampus.Persistence.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
 
 </Project>
