--- a/BattleCampus.Dashboard/appsettings.json
+++ b/BattleCampus.Dashboard/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BattleCampus-C697AAA5-22B0-49C3-A2AE-0E55EF0D4BA0;"
+  },
   "AllowedHosts": "*"
 }
