Added Server related commands and cleaned project

--- a/BattleCampus.Dashboard.Application/BattleCampus.Dashboard.Application.csproj
+++ b/BattleCampus.Dashboard.Application/BattleCampus.Dashboard.Application.csproj
@@ -6,11 +6,12 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BattleCampus.ManagerServer.Domain\BattleCampus.Dashboard.Domain.csproj" />
-    <ProjectReference Include="..\BattleCampus.ReportServer.Persistence\BattleCampus.Dashboard.Persistence.csproj" />
+    <ProjectReference Include="..\BattleCampus.Core\BattleCampus.Core.csproj" />
+    <ProjectReference Include="..\BattleCampus.ReportServer.Persistence\BattleCampus.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
