--- a/BattleCampusMatchServer/appsettings.json
+++ b/BattleCampusMatchServer/appsettings.json
@@ -1,3 +1,7 @@
 {
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "TokenKey": "thisisdebugtokenkey",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BattleCampus-C697AAA5-22B0-49C3-A2AE-0E55EF0D4BA0;"
+  }
 }
