--- a/BattleCampus.ManagerServer.Application/BattleCampus.MatchServer.Application.csproj
+++ b/BattleCampus.ManagerServer.Application/BattleCampus.MatchServer.Application.csproj
@@ -1,16 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\BattleCampus.ReportServer.Persistence\BattleCampus.Persistence.csproj" />
-    <ProjectReference Include="..\BattleCampusMatchServer.Models\BattleCampusMatchServer.Models.csproj" />
   </ItemGroup>
 
 </Project>
