configured dbcontext and added mirgrations

--- a/BattleCampus.ManagerServer.Application/BattleCampus.MatchServer.Application.csproj
+++ b/BattleCampus.ManagerServer.Application/BattleCampus.MatchServer.Application.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BattleCampus.ReportServer.Persistence\BattleCampus.Persistence.csproj" />
+    <ProjectReference Include="..\BattleCampusMatchServer.Services\BattleCampusMatchServer.Services.csproj" />
   </ItemGroup>
 
 </Project>
