--- a/BattleCampus.Dashboard.API/appsettings.json
+++ b/BattleCampus.Dashboard.API/appsettings.json
@@ -9,5 +9,6 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BattleCampus-C697AAA5-22B0-49C3-A2AE-0E55EF0D4BA0;"
   },
+  "TokenKey": "thisisdebugtokenkey",
   "AllowedHosts": "*"
 }
