Moved all apis to MatchServer

--- a/BattleCampus.ManagerServer.Application/BattleCampus.MatchServer.Application.csproj
+++ b/BattleCampus.ManagerServer.Application/BattleCampus.MatchServer.Application.csproj
@@ -13,4 +13,8 @@
     <ProjectReference Include="..\BattleCampusMatchServer.Services\BattleCampusMatchServer.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="User\Commands\" />
+  </ItemGroup>
+
 </Project>
