--- a/BattleCampus.ManagerServer.Application/BattleCampus.MatchServer.Application.csproj
+++ b/BattleCampus.ManagerServer.Application/BattleCampus.MatchServer.Application.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
