--- a/BattleCampusMatchServer/Properties/launchSettings.json
+++ b/BattleCampusMatchServer/Properties/launchSettings.json
@@ -19,8 +19,8 @@
     },
     "BattleCampusMatchServer": {
       "commandName": "Project",
-      "launchBrowser": false,
-      "launchUrl": "weatherforecast",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
       "applicationUrl": "https://localhost:4001;http://localhost:4000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
